se actualizo el espacio en todos los views tambien se ajusto el index y se creo el logo

--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="es">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
-  </head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/png" href="./src/assets/logo.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>PERSOINVITAMX</title>
+  <meta name="keywords" content="invitaciones digitales, invitaciones para bodas, invitaciones para cumpleaños, invitaciones personalizadas, invitaciones online, invitaciones para eventos, invitaciones electrónicas, diseño de invitaciones, invitaciones modernas, invitaciones para XV años, invitaciones digitales México" />
+  <meta name="description" content="PersoInvitaMX ofrece invitaciones digitales únicas y personalizadas para bodas, cumpleaños, XV años y todo tipo de eventos. Diseño elegante y moderno para tus celebraciones." />
+</head>
+
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
